# StripchatRecorder

./: .dockerignore  Dockerfile  README.en.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: custom-locale.en.md  custom-locale.md  module-development.en.md  module-development.md
modules/contact_sheet/: Cargo.toml
modules/contact_sheet/src/: main.rs
modules/filter_short/: Cargo.toml
modules/filter_short/src/: main.rs
modules/notify_discord/: Cargo.toml
modules/notify_discord/src/: main.rs
modules/notify_telegram/: Cargo.toml
modules/notify_telegram/src/: main.rs
modules/pp_utils/: Cargo.toml
modules/pp_utils/src/: lib.rs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  recording.rs
src-tauri/src/commands/: postprocess_cmd.rs  recording_cmd.rs  settings_cmd.rs  streamer_cmd.rs
src-tauri/src/config/: settings.rs
src-tauri/src/core/: emitter.rs
src-tauri/src/postprocess/: pipeline.rs
src-tauri/src/recording/: hls.rs  recorder.rs
src-tauri/src/server_mod/: server.rs
src/components/: AddStreamerDialog.vue  NotifyLayer.vue  StreamerCard.vue
src/composables/: useImagePreview.ts  useMerging.ts  usePostprocess.ts  useRecordings.ts
src/lib/: api.ts  utils.ts
src/locales/: en-US.ts  zh-CN.ts
src/router/: index.ts
src/stores/: postprocess.ts  settings.ts
src/types/: recordings.ts
src/views/: HomeView.vue  PostprocessView.vue  RecordingsView.vue  SettingsView.vue
(+3 files in other folders)
