[package]
name = "notify_telegram"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notify_telegram"
path = "src/main.rs"

[dependencies]
pp_utils = { path = "../pp_utils" }
grammers-client   = { version = "0.9", features = ["proxy", "fs"] }
grammers-session  = { version = "0.9", features = ["sqlite-storage"] }
grammers-mtsender = { version = "0.9", features = ["proxy"] }
tokio    = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5"
